get the right position when inserting backreferences

BUG: 134101

svn path=/trunk/KDE/kdelibs/kate/; revision=628866