part/part/katesearch.cpp
@@ -384,7 +384,7 @@ void KateSearch::replaceOne()
           kDebug()<<"KateSearch::replaceOne(): you don't have "<<ccap<<" backreferences in regexp '"<<m_re.pattern()<<"'"<<endl;
         }
       }
-      pos = br.indexIn( replaceWith, pos + qMax(br.matchedLength(), (int)sc.length()) );
+      pos = br.indexIn( replaceWith, pos + (int)sc.length());
     }
   }
 
